# bayesian-weather-mobile

./: .gitignore  README.md
docs/: architecture.md  research-spike-report.md
ml/: requirements.txt
ml/checkpoints/: linear_best.json
ml/data/: build_dataset.py  build_teacher_targets.py  collect_training_data.py  download_era5.py  prepare_sequences.py  preprocess.py
ml/export/: export_ensemble_json.py  export_fusion_weights_json.py  export_linear_weights_json.py  export_lstm_weights_json.py  export_to_pte.py  export_weights_json.py
ml/training/: bayesian_cal.py  bma_model.py  bma_teacher.py  distill.py  evaluate.py  evaluate_spike.py  lstm_forecaster.py  lstm_model.py  patchtst_forecaster.py  run_spike.py  run_spike_v2.py  train.py  train_ensemble.py  train_linear.py  train_lstm.py  train_teacher.py  train_utils.py
mobile/: README.md  pubspec.yaml
mobile/android/: build.gradle
mobile/android/app/: build.gradle  build.gradle.kts
mobile/android/app/src/main/cpp/: CMakeLists.txt  bma_executorch.cpp
mobile/assets/models/: bma_stats.json  bma_weights.json  fusion_stats.json  lstm_weights.json
mobile/ios/: Podfile
mobile/ios/Runner/: Info.plist  bma_executorch.mm
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/inference/: bma_dart_engine.dart  bma_engine.dart  (+4 more)
mobile/linux/: CMakeLists.txt
mobile/test/: forecast_cache_service_test.dart  noaa_service_test.dart  widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
scripts/: analyze_benchmarks.py  fetch_noaa.py
(+38 files in other folders)
